Remove an enumeration commma

--- a/latex/recipe-141.tex
+++ b/latex/recipe-141.tex
@@ -51,7 +51,7 @@
 
 \step 去皮：将热水（水温高低，可用手试一试。方法是：用手在水中抓三下，觉得烫
 手，但又烫得不很痛时为合适。饮食业叫它“三把水”。因为水温太高时，抓一二下就会烫
-手；水温太低则抓五、六下也不致烫手，这是厨师们的实际经验），舀十斤在鳝鱼盆中，
+手；水温太低则抓五六下也不致烫手，这是厨师们的实际经验），舀十斤在鳝鱼盆中，
 鳝身被水一烫，鳝皮变色了。并且有的地方鳝皮已离鳝肉，再用小刀轻轻地刮去鳝身的青
 色外皮，刮后现出一种银白色的油皮，皮上呈现出美丽的花纹（在去皮过程中切勿将油皮
 弄破，以免影响外表美观）。
