Remove an enumeration commma

--- a/latex/recipe-296.tex
+++ b/latex/recipe-296.tex
@@ -50,7 +50,7 @@
 
 肉刮洗干净，切成二寸见方块子，瘦肉宰烂炸成肉饼，连同鸡块、鸡蛋、冬笋装一小坛
 内，加进绍酒、花椒、葱、姜、金钩、冰糖色、酱油、食盐、冰糖和适当好汤，用纸打湿
-封严坛口，在糠壳火上煨约五、六小时即好。出坛时去姜、葱，有条理地盛入菜盘中，将
+封严坛口，在糠壳火上煨约五六小时即好。出坛时去姜、葱，有条理地盛入菜盘中，将
 汤汁倾入锅中，下水豆粉扯芡，淋在肉上。
 
 \features
