Remove an enumeration commma

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -226,7 +226,7 @@
 作“龟鳖肉”。
 
 \reciperef{143}。《四》本中尾注标记{\footnotesize\circled{1}}在“原料”段落中“鲢
-鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本作“竹篾篦”。
+鱼头一个约四五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本作“竹篾篦”。
 据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本作“……轻轻试一下”。据《中》本
 改。尾注{\footnotesize\circled{1}}中“而不是一般池塘养的鲢鱼”，《四》本无此句。
 据《中》本补。之后“但四川人……”，《四》本无“但”字。据《中》本补。尾注
