Remove an enumeration commma

--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -82,7 +82,7 @@
 酒坛（内外有釉、无裂缝者）一个安于三脚架上。然后将猪骨垫于坛底和坛内四周，再将
 开水、料酒、姜、葱布包、盐、红白酱油、火腿、猪肘子肉、鸡肉、鸭肉、冬笋、口蘑布
 包、墨鱼、珧柱、大金钩、冰糖汁等依次放入坛中。用纸封固坛口，再把锯末十五斤堆于
-坛外四周，煨四、五小时（在煨的过程中，要有专人负责看火，不能用旺火，也不能断
+坛外四周，煨四五小时（在煨的过程中，要有专人负责看火，不能用旺火，也不能断
 火）后，撕去坛口草纸，将鱼翅布包，海参布包，炸好的鸡蛋放入坛中，再煨半小时即
 成。
 
