Remove an enumeration commma

--- a/latex/recipe-143.tex
+++ b/latex/recipe-143.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{鲢鱼头}{一个约四、五斤}
+\ingredient{鲢鱼头}{一个约四五斤}
 \ingredient{猪肥膘肉}{五两}
 \ingredient{料酒}{六两}
 \ingredient{酱油}{二两}
