Remove an enumeration commma

--- a/latex/recipe-170.tex
+++ b/latex/recipe-170.tex
@@ -51,7 +51,7 @@
 \step 将料酒、盐、味精、水豆粉等放入小碗中搅匀，成为滋汁。
 
 \step 将猪油入锅烧红，放入鱿鱼丝煸炒后，烹入料酒，再煸一下，即将肉丝放入，与鱿
-鱼丝一同炒熟；随后放入冬笋辣椒丝炒匀，烹入滋汁稍煸四、五下，再将香油淋于菜上炒
+鱼丝一同炒熟；随后放入冬笋辣椒丝炒匀，烹入滋汁稍煸四五下，再将香油淋于菜上炒
 匀，即起锅入盘上席。
 
 \features
