Remove an enumeration commma

--- a/latex/recipe-288.tex
+++ b/latex/recipe-288.tex
@@ -49,7 +49,7 @@
 持滋润，勿使干燥。
 
 剔下鸭脯肉连同珧柱、火腿、荸荠宰碎，盛在碗内，打下蛋清，加进味精、水豆粉、胡椒
-面、食盐、绍酒及一勺鸡汤，调拌均匀。在锅中将猪油煎辣后，放下鸭脯炒四、五分钟，
+面、食盐、绍酒及一勺鸡汤，调拌均匀。在锅中将猪油煎辣后，放下鸭脯炒四五分钟，
 铲在鸭皮上，上笼蒸约一分钟，取出翻在盘子上即成。
 
 \features
