Remove an enumeration commma

--- a/latex/recipe-057.tex
+++ b/latex/recipe-057.tex
@@ -38,7 +38,7 @@
 
 \preparation
 
-\step 饲养与宰杀：将乳猪买回，用稀饭喂养三、四天，以去其腹内污秽和长膘。杀时用
+\step 饲养与宰杀：将乳猪买回，用稀饭喂养三四天，以去其腹内污秽和长膘。杀时用
 尖刀从咽喉处杀死，倒提后足流去血浆。再用干细炭灰匀撒猪身以手抹匀，以六至七成开
 的热水烫洗去毛，从头至尾用镊子（头部凹缝处可用烧红的铁钎烙）清洗干净。然后从喉
 头起将猪逢中对半剖开，去肚腹内脏，留腰子不取。
