Remove an enumeration commma

--- a/latex/recipe-098.tex
+++ b/latex/recipe-098.tex
@@ -52,7 +52,7 @@
 仁剁细（绿豆大）放入碗内。
 
 \step 将鸡脯肉去下皮朦，放在墩子上用刀背捶茸，抽尽细筋，再捶数十下，肉内无籽，
-用刀口剁三、四次，将细纤维陷在墩子上，用刀轻轻的将肉铲起放在一边。将肥膘肉剁细
+用刀口剁三四次，将细纤维陷在墩子上，用刀轻轻的将肉铲起放在一边。将肥膘肉剁细
 如油脂，放在一个碗内装好。鸡茸放入木瓢加入蛋清，用手在瓢内搅十几分钟，加入八钱
 清水及料酒，边搅边加，作四五次加完，再放入调匀后的干豆粉及剁好的猪肥膘、桃
 仁、味精，搅十几分钟，再加盐搅十几分钟，装入九寸盘内（盘心抹上一层油），刮平成
