Remove an enumeration commma

--- a/latex/recipe-163.tex
+++ b/latex/recipe-163.tex
@@ -57,7 +57,7 @@
 成细末，分开放入盘内。
 
 \step 将捶好的虾仁用少量清水调散，放下二个蛋清，再放下剁好的猪肥膘肉、盐、水
-豆粉。每放下一样品种时都要搅上数十转，只能顺着搅，不能反顺搅；大约搅至三、四
+豆粉。每放下一样品种时都要搅上数十转，只能顺着搅，不能反顺搅；大约搅至三四
 百转时挤成桂圆形；置于水中能浮于水面，颜色为白而带宝色，不带一点杂质即成“糁”。
 
 \step 将桂圆形的糁，每六个在上面一种细末内滚一转，五种细末，共三十个虾球，滚好
