Remove an enumeration commma

--- a/latex/recipe-182.tex
+++ b/latex/recipe-182.tex
@@ -46,11 +46,11 @@
 \step 先将鱿鱼放于温水中泡一小时，淘洗干净，去头尾，用快刀片成长二寸二、宽一寸
 六的完整、均匀而极薄的片，盛入碗中。再用五成开的热水淘洗一次，滗去热水，随后用
 草碱拌匀，加入开水，盖上盖；焖到水温下降至不烫手时，将水滗去一半，再倒入开水加
-盖焖。如此重复操作三、四次，使鱿鱼片达到色白、透明、体软为度，然后用清水漂着待
+盖焖。如此重复操作三四次，使鱿鱼片达到色白、透明、体软为度，然后用清水漂着待
 用。
 
 \step 菠菜去外叶不用，但须保持根上有红色的一段，共得心一两，淘洗干净，入开水中
-汆熟。特级清汤半斤入锅烧开，放入鱿鱼片煨三、四分钟后滗去汤；随后再这样重复操作
+汆熟。特级清汤半斤入锅烧开，放入鱿鱼片煨三四分钟后滗去汤；随后再这样重复操作
 一次。然后将特级清汤放入锅中烧开，加胡椒面、料酒、味精、酱油等。最后用精致汤碗
 一个，将汆好的菠菜心放在碗底，上盖鱿鱼片，再将锅中的特级清汤倒入碗中上席。
 
