Remove an enumeration commma

--- a/latex/recipe-299.tex
+++ b/latex/recipe-299.tex
@@ -43,7 +43,7 @@
 \preparation
 
 将鱼片切成一分多厚的片子，用油微爆，即加进鸡汤二瓢半，并放下萝卜丝、姜、葱、食
-盐、胡椒面，以大火煮三、四分钟，起锅时稍加味精，吃时蘸以毛姜醋。
+盐、胡椒面，以大火煮三四分钟，起锅时稍加味精，吃时蘸以毛姜醋。
 
 \features
 
