Remove an enumeration commma

--- a/latex/recipe-165.tex
+++ b/latex/recipe-165.tex
@@ -57,7 +57,7 @@
 一寸六分长的条块。猪肉和鸡肉先去净茸毛，刮洗干净，切成二寸见方的块。姜（拍松）
 和大葱洗净，连同花椒、胡椒、草果、八角等用稀眼布包好待用。
 
-\step 炒锅放炉上，放入清水，将雪猪肉、鸡块一起放入锅中煮二、三分钟，去净血水
+\step 炒锅放炉上，放入清水，将雪猪肉、鸡块一起放入锅中煮二三分钟，去净血水
 泡沫，然后捞出，在清凉水中漂冷后，清洗干净待用（最好多汆几次）。
 
 \step 砂锅放炉上，放入特级清汤，再将料酒、醪糟、姜葱布包、红白酱油、盐等全部放
