Remove an enumeration commma

--- a/latex/recipe-164.tex
+++ b/latex/recipe-164.tex
@@ -44,7 +44,7 @@
 
 \preparation
 
-\step 麂腿肉放于热水中，用丝瓜瓤擦洗二、三次，把表面附着的杂质洗干净，装入大蒸
+\step 麂腿肉放于热水中，用丝瓜瓤擦洗二三次，把表面附着的杂质洗干净，装入大蒸
 碗里，淋上料酒、加入葱白、姜（拍松）和沸水，上笼用旺火蒸三十分钟即熟。取出姜、
 葱不用，并去水。将麂腿肉去筋后晾凉，用刀依着肉的纤维横切成一分厚、一寸半长的肉
 片（宽度不限，因要改切成丝），依次摆好，顺着肉的纤维再切成一分宽的丝，即成一寸
