Remove an enumeration commma

--- a/latex/recipe-194.tex
+++ b/latex/recipe-194.tex
@@ -49,7 +49,7 @@
 
 \step 选大小均匀的海参，平片成长约三寸的片（十六片），再逢中腰断成三十二片，用
 刀修成前宽八分、后宽六分。在宽的一头用刀划成五个五分长的齿，再将五个齿的尖上修
-成箭头形，投入好汤，加胡椒、味精、盐、料酒，煮二、三分钟，打起待用。
+成箭头形，投入好汤，加胡椒、味精、盐、料酒，煮二三分钟，打起待用。
 
 \step 鸡脯肉、肥猪膘、鸡蛋清、豆粉，合搅成“糁”。鸡蛋清合干豆粉搅成蛋清豆粉。选
 约五寸长的丝瓜刮去粗皮，洗净，车成两张丝瓜皮，在沸水内煮过，捞入冷水浸透，将水
