Remove an enumeration commma

--- a/latex/recipe-233.tex
+++ b/latex/recipe-233.tex
@@ -43,7 +43,7 @@
 均匀，每棵切成对半。然后用清水洗净，漂入清水中待用。
 
 \step 炒锅放于大旺火炉上，倒入开水四斤，再放入白菜心煮。煮时不要盖锅，否则白菜
-便要变色。煮至八分火\footnotemark 时捞出，用清水过二、三次，务使菜心冷透。然后
+便要变色。煮至八分火\footnotemark 时捞出，用清水过二三次，务使菜心冷透。然后
 将白菜有次序地摆入蒸碗中，上加胡椒面、料酒、盐和特级清汤，入笼用大旺火蒸四分
 钟。
 
