Remove an enumeration commma

--- a/latex/recipe-218.tex
+++ b/latex/recipe-218.tex
@@ -55,7 +55,7 @@
 
 \step 鲜嫩茄子去皮削成直径一寸三分的圆柱状，再切成三分厚的片三十六片，净重四
 两。选用大膘猪的背柳肉二两，肥膘一两，混合剁成肉末。金钩用沸水泡一小时，再用温
-水洗二、三次，与火腿、鲜笋分别剁碎如小米粒大。大碗内放入酱油、盐、味精、水豆
+水洗二三次，与火腿、鲜笋分别剁碎如小米粒大。大碗内放入酱油、盐、味精、水豆
 粉，加清水调匀，再加料酒，与猪肉末、金钩末、火腿末、鲜笋末等一并用竹筷搅匀，成
 为混合肉末。
 
