Remove an enumeration commma

--- a/latex/recipe-301.tex
+++ b/latex/recipe-301.tex
@@ -48,8 +48,8 @@
 \preparation
 
 将鸡肉用刀划若干条纹（如荔枝壳状）后，切成大指头般厚的方块子，与绍酒、豆粉、食
-盐在碗内和拌，倾入辣油锅里快炒几铲，随即放进莴笋、泡海椒，再快炒二、三铲，同时
-将姜、葱、蒜、酱油、醋、白糖等在碗内调匀，迅即倾入锅内，继续快炒二、三铲，起锅
+盐在碗内和拌，倾入辣油锅里快炒几铲，随即放进莴笋、泡海椒，再快炒二三铲，同时
+将姜、葱、蒜、酱油、醋、白糖等在碗内调匀，迅即倾入锅内，继续快炒二三铲，起锅
 即成。
 
 \features
