Remove an enumeration commma

--- a/latex/recipe-057.tex
+++ b/latex/recipe-057.tex
@@ -51,7 +51,7 @@
 色。此时从杀口处取出颈颡骨一节（约一寸长），再由腹腔内将脊椎与肋骨接榫处（俗呼
 龙骨）从中切剖约二寸长，以便上叉时猪身平伏不致突起。
 
-\step 上叉：将叉子（铁制、两股）从猪后腿近肘处刺入猪身，穿过腹腔，在一、二匹肋
+\step 上叉：将叉子（铁制、两股）从猪后腿近肘处刺入猪身，穿过腹腔，在一二匹肋
 骨缝中刺进猪肉层，再从猪头两耳根下穿出（此时叉尖约与猪眼平行）；将两耳边用刀修
 去一部分，使之直立略呈尖形；将尾巴用竹签穿过，扭成乙形，尾尖向上略微倾向猪头。
 用尖头竹签，从肚腹两边裙边处刺进猪肉，以不伤皮为度。在肋缝处可以斜刺，大约每匹
