Remove an enumeration commma

--- a/latex/recipe-010.tex
+++ b/latex/recipe-010.tex
@@ -56,7 +56,7 @@
 
 \step 花椒十粒，与干辣椒一同放入锅中，在微火上用手铲不停翻炒，至辣椒刚炒酥时滴
 入菜油少许炒匀，铲起砸成辣椒面，用大汤杯盛起。将菜油烧热，等温度降低一半时倒入
-辣椒面中，随即加入豆瓣、酱油、味精等，调匀为料碟（料碟可备一、二碟，或每人一
+辣椒面中，随即加入豆瓣、酱油、味精等，调匀为料碟（料碟可备一二碟，或每人一
 碟）与连锅一同上席。
 
 \features
