Remove an enumeration commma

--- a/latex/recipe-047.tex
+++ b/latex/recipe-047.tex
@@ -52,7 +52,7 @@
 竹筷搅匀；再去掉姜、葱，倒入蒸碗中，上笼用旺火蒸十五分钟，汁即变成肝膏。
 
 \step 锅放炉上，放入清汤，再加盐、胡椒、味精。将汤烧开，然后将竹荪由泡水中捞
-出，在二汤中汆一、二次，放入汤中，随即起锅放入碗中。再将蒸好的肝膏出笼，轻轻地
+出，在二汤中汆一二次，放入汤中，随即起锅放入碗中。再将蒸好的肝膏出笼，轻轻地
 把整块肝膏倒入汤碗中上席。
 
 \features
