Remove an enumeration commma

--- a/latex/recipe-143.tex
+++ b/latex/recipe-143.tex
@@ -54,7 +54,7 @@
 刀对剖成两瓣。猪肥膘肉切成一寸长、三分宽厚的条。
 
 \step 猪油放入大炒锅内置于旺火上烧至七成热，即将鱼头放入稍炸，并烹入料酒，炸至
-略呈微黄色时捞出；滗去猪油，留一、二两在锅内，将猪肥膘肉及鸡鸭足、料酒、葱姜放
+略呈微黄色时捞出；滗去猪油，留一二两在锅内，将猪肥膘肉及鸡鸭足、料酒、葱姜放
 入煵一下，即加入鸡汤，开锅后撇去浮沫。
 
 \step 用头号铝锅一个，锅底垫上竹篾箅，先将煵过的鸡鸭足在锅中捞出放于篾箅上垫
