Remove an enumeration commma

--- a/latex/recipe-231.tex
+++ b/latex/recipe-231.tex
@@ -54,7 +54,7 @@
 中泡六分钟，捞出放入清水内。这种做法是使豆腐变成空心豆腐。但不能使豆腐全部空
 完，可以用手指按一按，若空完则是碱大了，没有空则是碱小了。
 
-\step 将豆腐在开水中汆一、二次后放入碗中，再用二汤汆一、二次。将特级奶汤舀入锅
+\step 将豆腐在开水中汆一二次后放入碗中，再用二汤汆一二次。将特级奶汤舀入锅
 中，加胡椒面、味精、料酒、盐等烧开，然后放入豆腐，搅匀起锅，盛在碗内。将鸡油淋
 于汤中上席。
 
