Remove an enumeration commma

--- a/latex/recipe-265.tex
+++ b/latex/recipe-265.tex
@@ -50,7 +50,7 @@
 时），即取出洗净，切成骨牌块状，用沸水连续微煮三次（厨称出水三次），以去其胶质
 和臊气。
 
-猪油在旺火上煎辣，即放入葱姜快炒一、二铲，掺进肉汤，俟汤沸即取出葱姜不要。随即
+猪油在旺火上煎辣，即放入葱姜快炒一二铲，掺进肉汤，俟汤沸即取出葱姜不要。随即
 放入牛皮移置文火上烧约一小时，捞起滤干汤汁，置铝锅内，加进鸡汤、绍酒、生鸡油、
 食盐和冰糖色等，以文火烧熟为止（约一小时）。起锅时取出生鸡油渣不要，牛皮转入另
 一耳锅里用武火收稠汤汁，淋上小磨麻油，盛于盘内，配上刚炒好的鲜菜即成。
