--- a/latex/recipe-016.tex
+++ b/latex/recipe-016.tex
@@ -64,8 +64,8 @@
 
 \features
 
-此菜颜色金黄，味咸甜，宜于热吃，鲜美清香，别具风味。用鲜荷叶包裹，是取其清香味，
-故宜于荷花盛开时节烹制。吃时由食用者自己剥去荷叶。
+此菜颜色金黄，味咸甜，宜于热吃，鲜美清香，别具风味。用鲜荷叶包裹，是取其清香
+味，故宜于荷花盛开时节烹制。吃时由食用者自己剥去荷叶。
 
 \end{recipe}
 
