Revise note for ZHUNGAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -213,8 +213,8 @@
 
 \reciperef{115}。“硝”，亚硝酸钠，化学式NaNO\textsubscript{2}。
 
-\recipelist{120,121,123,223,257,262}。“肫”，《四》本作“𬂁”。径改。“肫”，鸟类的
-胃。
+\recipelist{120,121,123,223,257,262}。“肫肝”，《四》本作“𬂁肝”。径改。
+“肫肝”，鸟类的胃。
 
 \recipelist{120,129,130,131,132,133,134,135,136,137}等多篇，“鳃”。各本皆作
 “腮”。径改。
