Remove enumeration comma

--- a/latex/recipe-089.tex
+++ b/latex/recipe-089.tex
@@ -51,7 +51,7 @@
 \step 茨菰削皮，调蛋清豆粉；网油洗净，去厚油边、去梗鸡脯去膜和油筋，切成细丝；
 肥瘦肉、火腿、香菌、茨菰均分别切细丝，加盐、味精、胡椒、料酒共同拌匀。
 
-\step 网油平铺案上，先抹上蛋清豆粉，再把拌好味的各种丝子用网油裹起，裹成、三分
+\step 网油平铺案上，先抹上蛋清豆粉，再把拌好味的各种丝子用网油裹起，裹成三分
 厚、一寸五宽的卷约四至六条，用刀尖放气。
 
 \step 旺火将油烧五至六成热。鸡卷先在干豆粉内滚一层，下油锅炸呈金黄色。滗炸油，
