--- a/latex/recipe-304.tex
+++ b/latex/recipe-304.tex
@@ -52,7 +52,7 @@
 锅烧辣后放下猪油，到油滚热现出小点子时，将上述鸡绒沿锅边倒下，这样鸡绒便浮在油
 的上面，油烧开冲起来时，即将鸡绒连油一齐倒在大漏瓢内，滤去猪油。
 
-将味精、食盐、胡椒面、水豆粉、连同少许鸡汤调和在一碗中。
+将味精、食盐、胡椒面、水豆粉，连同少许鸡汤调和在一碗中。
 
 在锅内用二两猪油烧辣，先下姜、葱，继下火腿、冬笋、冬菇、豆尖稍炒，随即倒下鸡
 绒，以极迅速的手法炒数下，立即起锅。
