--- a/latex/recipe-207.tex
+++ b/latex/recipe-207.tex
@@ -53,7 +53,7 @@
 甲壳；蜜樱桃对剖。
 
 \step 网油修成一方铺于蒸碗内，即将蜜樱桃随意摆上成花纹图案，再相继放入瓜片、橘
-红、苡仁、百合、芡实、莲米，等材料，同时将藕片摆成风车车定好，撒入白糖二两，放
+红、苡仁、百合、芡实、莲米等材料，同时将藕片摆成风车车定好，撒入白糖二两，放
 笼上再蒸至极𤆵，走菜时翻于圆盘内，揭去网油，将其余白糖收成糖清挂上即成。
 
 \features
