--- a/latex/recipe-107.tex
+++ b/latex/recipe-107.tex
@@ -68,7 +68,7 @@
 砂锅一个，将各物舀入砂锅中，其上放入炸好的鸭卷，上炉用微火煨至七分火时，取出鸭
 卷，摆在蒸碗中，摆成卍字形，然后将鸡块放在鸭卷上，再将肉块、鸭头、鸭足、鸭翅等
 放在鸡块上，蒸碗口用消毒草纸封固，放入蒸笼内蒸三十分钟出笼，撕去碗口草纸，捡去
-肉块、鸭头、鸭翅、鸭脚等另做他用，将蒸碗中的鸡块、鸭卷翻扣盘中，揭去蒸碗（鸭卷
+肉块、鸭头、鸭翅、鸭脚等另作他用，将蒸碗中的鸡块、鸭卷翻扣盘中，揭去蒸碗（鸭卷
 盖面，鸡块垫底）。再把砂锅中的原汁用旺火熬酽，加鲜菜淋入盘中鸭卷之上入席。
 
 \features
