Revise the title of the reference book for accuracy

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -64,8 +64,8 @@
 经济出版社版，和《重庆名菜谱》重庆市饮食服务公司一九六〇年五月重庆人民出版社
 版，亦尽可能采用。《四川菜谱》一九七二年七月版，省略称为《四》；《四川菜谱》一
 九八八年九月版，省略称为《八》；《四川菜谱》四川省蔬菜水产饮食服务公司一九七七
-年七月版，省略称为《七》；《中国名菜谱第七辑四川名菜点》，省略称为《中》；《重
-庆名菜谱》，省略称为《重》。
+年七月版，省略称为《七》；《中国名菜谱（第七辑）——四川名菜点》，省略称为
+《中》；《重庆名菜谱》，省略称为《重》。
 
 校勘基本方针。保留方言用字。修正异体字。对已经弃用的同音简化字和类推简化字，恢
 复原字。修正误植、错字、别字。
