Include XMP metadata in the PDF document produced

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -31,6 +31,7 @@
 \documentclass{cookbook}
 \input{git-revision.tex}
 \usepackage{bookmark}
+\usepackage{hyperxmp}
 	\hypersetup{
 		unicode=true,
 		pdfduplex={DuplexFlipLongEdge},
@@ -42,9 +43,37 @@
 		pdftitle={Sichuan Cookbook 1972 Remake},
 		pdfsubject={312 Traditional Recipes: The Culinary History of Sichuan},
 		pdfauthor={Chengdu Catering Company},
+		pdfauthortitle={},
+		pdfcopyright={Copyright (c) 2023--2025 Quux System and Technology},
 		pdfkeywords={Chinese-food, cookbook, culture, food, recipe, %
 			Sichuan, Szechuan, Szechwan},
+		pdflicenseurl={https://opensource.org/license/bsd-3-clause},
+		pdfcaptionwriter={GONG Jie},
+		pdfcontactaddress={},
+		pdfcontactcity={Beijing Municipality},
+		pdfcontactemail={},
+		pdfcontactphone={},
+		pdfcontactcountry={China},
+		pdfcontactpostcode={100000},
+		pdfcontacturl={%
+			https://github.com/neo954/sichuan-cookbook
+		},
+		pdfdocumentid={uuid:fc7e6b8c-3f14-4f97-bfe0-8a12ac9cbb25},
+		pdfversionid={v1.0.6},
+		pdfpublication={},
+		pdfpublisher={Quux System and Technology},
+		pdfpubtype={book},
+		pdfvolumenum={0},
+		pdfissuenum={0},
+		pdfpagerange={1-352},
+		pdfisbn={0},
+		pdfbookedition={[en]First electronic edition},
+		pdfnumpages={352},
 		pdflang={zh-CN},
+		pdfmetalang={en},
+		pdfurl={https://github.com/neo954/sichuan-cookbook/releases/download/v1.0.6/sichuan-cookbook.v1.0.6.pdf},
+		pdfdoi={},
+		pdfidentifier={},
 		pdfinfo={
 			GitCommitName={\gitcommitname},
 			GitCommitHash={\gitcommithash},
@@ -53,6 +82,11 @@
 			PDFBuildHost={\pdfbuildhost}
 		},
 		hidelinks
+	}
+	\XMPLangAlt{zh-CN}{
+		pdftitle={四川菜谱1972重制版},
+		pdfsubject={312道传统菜谱：四川美食的历史},
+		pdfcopyright={版权所有 (c) 2023--2025 馄饨系统与科技}
 	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
