Include basic XMP metadata for other languages

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -83,10 +83,35 @@
 		},
 		hidelinks
 	}
+	\XMPLangAlt{zh-TW}{
+		pdftitle={四川食譜1972重製版},
+		pdfsubject={312道傳統食譜：四川美食的歷史},
+		pdfcopyright={版權所有 (c) 2023--2025 餛飩系統與科技}
+	}
 	\XMPLangAlt{zh-CN}{
 		pdftitle={四川菜谱1972重制版},
 		pdfsubject={312道传统菜谱：四川美食的历史},
 		pdfcopyright={版权所有 (c) 2023--2025 馄饨系统与科技}
+	}
+	\XMPLangAlt{fr}{
+		pdftitle={Recette du Sichuan 1972 Remake},
+		pdfsubject={312 Recettes Traditionnelles : L'Histoire Culinaire du Sichuan},
+		pdfcopyright={Copyright (c) 2023--2025 Quux System and Technology}
+	}
+	\XMPLangAlt{de}{
+		pdftitle={Sichuan Kochbuch 1972 Remake},
+		pdfsubject={312 traditionelle Rezepte: Die kulinarische Geschichte von Sichuan},
+		pdfcopyright={Urheberrecht (c) 2023–-2025, Quux System und Technologie}
+	}
+	\XMPLangAlt{es}{
+		pdftitle={Recetario de Sichuan 1972 Remake},
+		pdfsubject={312 Recetas Tradicionales: La Historia Culinaria de Sichuan},
+		pdfcopyright={Derechos de autor (c) 2023–2025, Quux System and Technology}
+	}
+	\XMPLangAlt{ru}{
+		pdftitle={Кулинарная книга Сычуани 1972 Ремейк},
+		pdfsubject={312 традиционных рецептов: Кулинарная история Сычуани},
+		pdfcopyright={Авторское право (c) 2023--2025 Quux System and Technology}
 	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
