Include basic XMP metadata for Japanese

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -113,6 +113,11 @@
 		pdfsubject={312 традиционных рецептов: Кулинарная история Сычуани},
 		pdfcopyright={Авторское право (c) 2023--2025 Quux System and Technology}
 	}
+	\XMPLangAlt{ja}{
+		pdftitle={四川料理本1972リメイク版},
+		pdfsubject={312の伝統的なレシピ：四川料理の歴史},
+		pdfcopyright={著作権 (c) 2023--2025 ククスシステムとテクノロジー}
+	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
 \usepackage{pdfoverlay}
