Include basic XMP metadata for Korean

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -118,6 +118,11 @@
 		pdfsubject={312の伝統的なレシピ：四川料理の歴史},
 		pdfcopyright={著作権 (c) 2023--2025 ククスシステムとテクノロジー}
 	}
+	\XMPLangAlt{kr}{
+		pdftitle={사천 요리책 1972 리메이크},
+		pdfsubject={312개의 전통 요리법：쓰촨 요리의 역사},
+		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
+	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
 \usepackage{pdfoverlay}
