Revise XMP metadata for Contact

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -57,11 +57,12 @@
 		pdflicenseurl={https://opensource.org/license/bsd-3-clause},
 		pdfcaptionwriter={GONG Jie},
 		pdfcontactaddress={},
-		pdfcontactcity={Beijing Municipality},
-		pdfcontactemail={},
-		pdfcontactphone={},
+		pdfcontactcity={Fengtai District},
+		pdfcontactregion={Beijing Municipality},
 		pdfcontactcountry={China},
 		pdfcontactpostcode={100000},
+		pdfcontactemail={},
+		pdfcontactphone={},
 		pdfcontacturl={%
 			https://github.com/neo954/sichuan-cookbook
 		},
