Include basic XMP metadata for Klingon

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -130,6 +130,11 @@
 		pdfsubject={312개의 전통 요리법：쓰촨 요리의 역사},
 		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
 	}
+	\XMPLangAlt{tlh}{
+		pdftitle={Sichwãn Su'vIp 1972 choQ},
+		pdfsubject={312 Hom Su'vIp: Sichwãn Su'vIp yoH},
+		pdfcopyright={qonwI' Qeq (c) 2023--2025 Quch HoS je wIjHom}
+	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
 \usepackage{pdfoverlay}
