Revise the Quux brandname in XMP metadata for German, Spanish and Russian

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -108,17 +108,17 @@
 	\XMPLangAlt{de}{
 		pdftitle={Sichuan Kochbuch 1972 Remake},
 		pdfsubject={312 traditionelle Rezepte: Die kulinarische Geschichte von Sichuan},
-		pdfcopyright={Urheberrecht (c) 2023–-2025, Quux System und Technologie}
+		pdfcopyright={Urheberrecht (c) 2023--2025, Quux System und Technologie}
 	}
 	\XMPLangAlt{es}{
 		pdftitle={Recetario de Sichuan 1972 Remake},
 		pdfsubject={312 Recetas Tradicionales: La Historia Culinaria de Sichuan},
-		pdfcopyright={Derechos de autor (c) 2023–2025, Quux System and Technology}
+		pdfcopyright={Derechos de autor (c) 2023--2025, Quux Sistema y Tecnología}
 	}
 	\XMPLangAlt{ru}{
 		pdftitle={Кулинарная книга Сычуани 1972 Ремейк},
 		pdfsubject={312 традиционных рецептов: Кулинарная история Сычуани},
-		pdfcopyright={Авторское право (c) 2023--2025 Quux System and Technology}
+		pdfcopyright={Авторское право (c) 2023--2025 Квукс Система и Технология}
 	}
 	\XMPLangAlt{ja}{
 		pdftitle={四川料理本1972リメイク版},
