Revise the Quux brandname in XMP metadata for French

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -103,7 +103,7 @@
 	\XMPLangAlt{fr}{
 		pdftitle={Recette du Sichuan 1972 Remake},
 		pdfsubject={312 Recettes Traditionnelles : L'Histoire Culinaire du Sichuan},
-		pdfcopyright={Copyright (c) 2023--2025 Quux System and Technology}
+		pdfcopyright={Droits d'auteur (c) 2023--2025 Quux Système et Technologie}
 	}
 	\XMPLangAlt{de}{
 		pdftitle={Sichuan Kochbuch 1972 Remake},
