--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -67,7 +67,7 @@
 			https://github.com/neo954/sichuan-cookbook
 		},
 		pdfdocumentid={uuid:fc7e6b8c-3f14-4f97-bfe0-8a12ac9cbb25},
-		pdfversionid={v1.0.6},
+		pdfversionid={\gitcommitname},
 		pdfpublication={},
 		pdfpublisher={Quux System and Technology},
 		pdfpubtype={book},
@@ -77,7 +77,7 @@
 		pdfbookedition={[en]First electronic edition},
 		pdflang={zh-CN},
 		pdfmetalang={en},
-		pdfurl={https://github.com/neo954/sichuan-cookbook/releases/download/v1.0.6/sichuan-cookbook.v1.0.6.pdf},
+		pdfurl={https://github.com/neo954/sichuan-cookbook/releases/download/{\gitcommitname}/sichuan-cookbook.{\gitcommitname}.pdf},
 		pdfdoi={},
 		pdfidentifier={},
 		pdfbytes={3653600},
