--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -86,7 +86,7 @@
 		},
 		pdfdocumentid={uuid:a71e3a09-19e9-438a-b6f3-c15bf4e2308a},
 		pdfversionid={\gitcommitname},
-		pdfpublication={},
+		pdfpublication={[en]Sichuan Cookbook},
 		pdfpublisher={Quux System and Technology},
 		pdfpubtype={book},
 		pdfvolumenum={0},
