--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -68,7 +68,7 @@
 		},
 		pdfdocumentid={uuid:fc7e6b8c-3f14-4f97-bfe0-8a12ac9cbb25},
 		pdfversionid={\gitcommitname},
-		pdfpublication={},
+		pdfpublication={[en]Sichuan Cookbook},
 		pdfpublisher={Quux System and Technology},
 		pdfpubtype={book},
 		pdfvolumenum={0},
