Revise the XMP metadata for Klingon language

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -131,9 +131,9 @@
 		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
 	}
 	\XMPLangAlt{tlh}{
-		pdftitle={Sichwãn Su'vIp 1972 choQ},
-		pdfsubject={312 Hom Su'vIp: Sichwãn Su'vIp yoH},
-		pdfcopyright={qonwI' Qeq (c) 2023--2025 Quch HoS je wIjHom}
+		pdftitle={Sichwan vutwI' paq 1972 choQ},
+		pdfsubject={312 vutwI' mIw: Sichwan vutwI' qun},
+		pdfcopyright={Se'vIr malja' DIb (c) 2023--2025 Qugh pat je cham}
 	}
 \usepackage{scalefnt}
 \usepackage{pdfpages}
