Include basic XMP metadata for other languages

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -110,10 +110,50 @@
 		},
 		hidelinks
 	}
+	\XMPLangAlt{zh-TW}{
+		pdftitle={四川食譜1972重製版：書籍封面},
+		pdfsubject={封底、書脊、封面，出血},
+		pdfcopyright={版權所有 (c) 2023--2025 餛飩系統與科技}
+	}
 	\XMPLangAlt{zh-CN}{
 		pdftitle={四川菜谱1972重制版：书籍封面},
 		pdfsubject={封底、书脊、封面，出血},
 		pdfcopyright={版权所有 (c) 2023--2025 馄饨系统与科技}
+	}
+	\XMPLangAlt{fr}{
+		pdftitle={Recette du Sichuan 1972 Remake : Couverture du Livre},
+		pdfsubject={Quatrième de couverture, dos, couverture avant, avec marges},
+		pdfcopyright={Droits d'auteur (c) 2023--2025 Quux Système et Technologie}
+	}
+	\XMPLangAlt{de}{
+		pdftitle={Sichuan Kochbuch 1972 Remake: Buchcover},
+		pdfsubject={Rückseite, Rücken, Vorderseite, mit Beschnitt},
+		pdfcopyright={Urheberrecht (c) 2023--2025, Quux System und Technologie}
+	}
+	\XMPLangAlt{es}{
+		pdftitle={Recetario de Sichuan 1972 Remake: Portada del Libro},
+		pdfsubject={Contraportada, lomo, portada, con sangrado},
+		pdfcopyright={Derechos de autor (c) 2023--2025, Quux Sistema y Tecnología}
+	}
+	\XMPLangAlt{ru}{
+		pdftitle={Кулинарная книга Сычуани 1972 Ремейк: Обложка книги},
+		pdfsubject={Задняя обложка, корешок, передняя обложка с полями},
+		pdfcopyright={Авторское право (c) 2023--2025 Квукс Система и Технология}
+	}
+	\XMPLangAlt{ja}{
+		pdftitle={四川料理本1972リメイク版：本の表紙},
+		pdfsubject={裏表紙、背表紙、表紙，塗り足し付き},
+		pdfcopyright={著作権 (c) 2023--2025 ククスシステムとテクノロジー}
+	}
+	\XMPLangAlt{kr}{
+		pdftitle={사천 요리책 1972 리메이크: 책 표지},
+		pdfsubject={뒷표지，등표지，앞표지，트림 포함},
+		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
+	}
+	\XMPLangAlt{tlh}{
+		pdftitle={Sichwan vutwI' paq 1972 choQ: paq 'echlet},
+		pdfsubject={bertlham 'echlet, wIlHay, bI'reS 'echlet, je HeH},
+		pdfcopyright={Se'vIr malja' DIb (c) 2023--2025 Qugh pat je cham}
 	}
 \usepackage[zihao=5]{ctexsize}
 \usepackage[quiet]{xeCJK}
