Revise the Japanese transliteration for Quux

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -143,7 +143,7 @@
 	\XMPLangAlt{ja}{
 		pdftitle={四川料理本1972リメイク版：本の表紙},
 		pdfsubject={裏表紙、背表紙、表紙，塗り足し付き},
-		pdfcopyright={著作権 (c) 2023--2025 ククスシステムとテクノロジー}
+		pdfcopyright={著作権 (c) 2023--2025 クークスシステムとテクノロジー}
 	}
 	\XMPLangAlt{kr}{
 		pdftitle={사천 요리책 1972 리메이크: 책 표지},
