--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -123,7 +123,7 @@
 	\XMPLangAlt{ja}{
 		pdftitle={四川料理本1972リメイク版},
 		pdfsubject={312の伝統的なレシピ：四川料理の歴史},
-		pdfcopyright={著作権 (c) 2023--2025 ククスシステムとテクノロジー}
+		pdfcopyright={著作権 (c) 2023--2025 クークスシステムとテクノロジー}
 	}
 	\XMPLangAlt{kr}{
 		pdftitle={사천 요리책 1972 리메이크},
