--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -131,7 +131,7 @@
 		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
 	}
 	\XMPLangAlt{tlh}{
-		pdftitle={Sichwan vutwI' paq 1972 choQ},
+		pdftitle={Sichwan vutwI' paq 1972 chenmoHlu'pu'},
 		pdfsubject={312 vutwI' mIw: Sichwan vutwI' qun},
 		pdfcopyright={Se'vIr malja' DIb (c) 2023--2025 Qugh pat je cham}
 	}
