Revise the Klingon translation

--- a/latex/book-cover.tex
+++ b/latex/book-cover.tex
@@ -151,7 +151,7 @@
 		pdfcopyright={저작권 (c) 2023--2025 퀙스 시스템과 기술}
 	}
 	\XMPLangAlt{tlh}{
-		pdftitle={Sichwan vutwI' paq 1972 choQ: paq 'echlet},
+		pdftitle={Sichwan vutwI' paq 1972 chenmoHlu'pu': paq 'echlet},
 		pdfsubject={bertlham 'echlet, wIlHay, bI'reS 'echlet, je HeH},
 		pdfcopyright={Se'vIr malja' DIb (c) 2023--2025 Qugh pat je cham}
 	}
