A collation note for recipe 252

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -292,6 +292,9 @@
 \reciperef{245}。“盐六分”，《四》本作“盐一分”。据《中》本改。《四》本无尾注%
 {\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据《中》本补。
 
+\reciperef{252}。猪蹄筋经发制、水漂加工成连刀细丝，晶莹透明，柔软滑嫩，有如燕
+菜一般，故名蹄燕。
+
 \reciperef{253}。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
 （烩）。”《四》本括号部分在句号之后。《中》本无括号部分内容。据《标点符号用法》
 \textsc{gb/t 15834--2011}，将括号部分移至句号之前。
