A collation note for QIZIKUAI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -107,6 +107,10 @@
 \recipelist{19,20,56,195,254}所附共十一副插图。《四》本《八》本插图，线条边缘
 参差不齐模糊不清。据《中》本插图重制。
 
+\recipelist{21,84,175,187,227,248}。“旗子块”，又称“斜方块”。指经运刀加工而
+成的平行四边形块状原料。因形如旗帜，故名。多用于脆性植物原料。如萝卜、莴笋、苤
+蓝等。
+
 \recipelist{22,33}。“肉圆”，《四》本作“肉元”。径改。
 
 \recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本作“口茉”。据
