A collation note for KOUMO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -113,8 +113,11 @@
 
 \recipelist{22,33}。“肉圆”，《四》本作“肉元”。径改。
 
-\recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本作“口茉”。据
-《中》本《重》本改。
+\recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本作“口茉”。
+据《中》本《重》本改。香杏丽蘑 (Calocybe gambosa) 是丽蘑属真菌。在中国生长在蒙
+古草原上，一般生长在有羊骨或羊粪的地方，味道异常鲜美。由于蒙古土特产以前都通过
+河北省张家口市输往内地，张家口是蒙古货物的集散地，所以此类蘑菇被称为“口蘑”，
+口即指张家口。
 
 \recipelist{26,93,96,110,111,219,244}。“三叠水”，菜肴的一种传统装盘形式。多用
 于冷菜。先取菜肴的片（或条），按顺序摆成两行，然后再在两行中部覆盖一行即成。要
