Text area with 30 degree tilt

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -44,6 +44,69 @@
 \setlength{\parskip}{.5\baselineskip}%
 \setlength{\parfillskip}{0pt}%
 
+\begingroup%
+
+\parshape 55
+	% 15 lines
+	.4365549\textwidth .0240458\textwidth% +27
+	.4175214\textwidth .1001799\textwidth% +26
+	.3984879\textwidth .1763140\textwidth% +25 rows above
+	.3794544\textwidth .2524481\textwidth
+	.3604208\textwidth .3285822\textwidth
+	.3413873\textwidth .4047163\textwidth
+	.3223538\textwidth .4808504\textwidth
+	.3033202\textwidth .5569845\textwidth% +20 rows above
+	.2842867\textwidth .6331186\textwidth
+	.2652532\textwidth .7092527\textwidth
+	.2462197\textwidth .7853868\textwidth
+	.2271861\textwidth .8615210\textwidth
+	.2081526\textwidth .9376551\textwidth% +15 rows above
+	.1891191\textwidth 1.013789\textwidth% +14
+	.1700856\textwidth 1.089923\textwidth% +13
+	% 25 lines
+	.1510520\textwidth 1.154700\textwidth% +12 rows above
+	.1320185\textwidth 1.154700\textwidth% +11 rows above
+	.1129850\textwidth 1.154700\textwidth% +10 rows above
+	.0939514\textwidth 1.154700\textwidth
+	.0749179\textwidth 1.154700\textwidth
+	.0558844\textwidth 1.154700\textwidth
+	.0368509\textwidth 1.154700\textwidth
+	.0178174\textwidth 1.154700\textwidth%  +5 rows above
+	-.001216\textwidth 1.154700\textwidth%  +4 rows above
+	-.020250\textwidth 1.154700\textwidth
+	-.039283\textwidth 1.154700\textwidth
+	-.058317\textwidth 1.154700\textwidth%  +1 row  above
+	-.077350\textwidth 1.154700\textwidth% Vertical centered text row
+	-.096384\textwidth 1.154700\textwidth%  +1 row  below
+	-.115417\textwidth 1.154700\textwidth
+	-.134451\textwidth 1.154700\textwidth
+	-.153484\textwidth 1.154700\textwidth%  +4 rows below
+	-.172518\textwidth 1.154700\textwidth%  +5 rows below
+	-.191551\textwidth 1.154700\textwidth
+	-.210585\textwidth 1.154700\textwidth
+	-.229618\textwidth 1.154700\textwidth
+	-.248652\textwidth 1.154700\textwidth
+	-.267686\textwidth 1.154700\textwidth% +10 rows below
+	-.286719\textwidth 1.154700\textwidth% +11 rows below
+	-.305752\textwidth 1.154700\textwidth% +12 rows below
+	% 15 lines
+	-.260009\textwidth 1.089923\textwidth% +13
+	-.202908\textwidth 1.013789\textwidth% +14
+	-.145808\textwidth .9376551\textwidth% +15 rows below
+	-.088707\textwidth .8615210\textwidth
+	-.031606\textwidth .7853868\textwidth
+	.0254941\textwidth .7092527\textwidth
+	.0825947\textwidth .6331186\textwidth
+	.1396953\textwidth .5569845\textwidth% +20 rows below
+	.1967958\textwidth .4808504\textwidth
+	.2538964\textwidth .4047163\textwidth
+	.3109970\textwidth .3285822\textwidth
+	.3680975\textwidth .2524481\textwidth
+	.4251981\textwidth .1763140\textwidth% +25 rows below
+	.4822987\textwidth .1001799\textwidth% +26
+	.5393993\textwidth .0240458\textwidth% +27
+~%
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -185,16 +248,10 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 \foreignlanguage{russian}{Авторское право} %
 	{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023–2025 \foreignlanguage{russian}{Квукс Система и Технология.}
-著作権~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 クークスシステムとテクノロジー.
-저작권~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 퀙스 시스템과 기술.
-Se'vIr malja' DIb {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
-	2023--2025 Qugh pat je cham.
-Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 \textsc{Quux} System and Technology.
-版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-	2023--2025 餛飩系統與科技.
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+
+\endgroup%
 
 \end{document}
 
