Makes the text color CMYK 2% black

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -46,6 +46,7 @@
 
 \null%
 \vspace{7.5\baselineskip}%
+\textcolor[cmyk]{0,0,0,.02}{%
 \rotatebox{30}{\parbox{\textwidth}{%
 \vspace{-.5\textheight}%
 \parshape 55
@@ -265,7 +266,7 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 \vspace{-.5\textheight}%
-}}%
+}}}%
 
 \end{document}
 
