Rotate the tilt paragraph 30 degree

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -44,8 +44,10 @@
 \setlength{\parskip}{.5\baselineskip}%
 \setlength{\parfillskip}{0pt}%
 
-\begingroup%
-
+\null%
+\vspace{7.5\baselineskip}%
+\rotatebox{30}{\parbox{\textwidth}{%
+\vspace{-.5\textheight}%
 \parshape 55
 	% 15 lines
 	.4365549\textwidth .0240458\textwidth% +27
@@ -107,6 +109,10 @@
 	.5393993\textwidth .0240458\textwidth% +27
 ~%
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 Copyright {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 	2023--2025 \textsc{Quux} System and Technology.
 版權所有~{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
@@ -250,8 +256,16 @@ Derechos de autor {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}} %
 	2023–2025 \foreignlanguage{russian}{Квукс Система и Технология.}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
-
-\endgroup%
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+\textsc{Quux}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+{\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
+\vspace{-.5\textheight}%
+}}%
 
 \end{document}
 
