Suppress the underfull \hbox (badness 10000) warning

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -49,6 +49,7 @@
 \textcolor[cmyk]{0,0,0,.02}{%
 \rotatebox{30}{\parbox{\textwidth}{%
 \vspace{-.5\textheight}%
+\hbadness=10000%
 \parshape 55
 	% 15 lines
 	.4365549\textwidth .0240458\textwidth% +27
