Use a invisible entity at the beginning of the paragraph

--- a/latex/multiple-language-copyright.tex
+++ b/latex/multiple-language-copyright.tex
@@ -109,7 +109,7 @@
 	.4251981\textwidth .1763140\textwidth% +25 rows below
 	.4822987\textwidth .1001799\textwidth% +26
 	.5393993\textwidth .0240458\textwidth% +27
-~%
+\rule{0pt}{0pt}%
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
 {\lower.125\baselineskip\hbox{\scalefont{1.25}\copyright}}
